[package]
name = "homm5-types"
version = "0.1.18"
edition = "2021"
description = "This crate contains data stuctures useful for Homm5 mods development"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = {version = "0.30.0", features = ["serialize", "serde-types"]}
serde = {version = "1.0.183", features = ["derive"]}
strum = "0.25.0"
strum_macros = "0.25.2"